# Model-Scratch

./: .gitignore  README.md
DLLayer/: CMakeLists.txt
DLLayer/include/: layers.hpp  tensor.hpp
DLLayer/src/: kernels.cu  main.cpp
KMeans/: CMakeLists.txt
KMeans/include/: kmeans.hpp
KMeans/src/: kmeansCuda.cu  main.cpp
SVM/: CMakeLists.txt
SVM/include/: matrix.hpp  perceptron.hpp  svm.hpp
SVM/src/: main.cpp
